@@ -22,4 +22,5 @@ Gem::Specification.new do |s|
   s.add_development_dependency 'rake-compiler', '0.8.0'
   s.add_development_dependency 'activesupport', '~> 3.0'
   s.add_development_dependency 'minitest'
+  s.add_development_dependency 'm'
 end
